# ComfyUI-AdvancedLivePortrait

./: README.md  __init__.py  install.bat  nodes.py  pyproject.toml  requirements.txt
LivePortrait/: live_portrait_wrapper.py
LivePortrait/config/: inference_config.py
LivePortrait/src/: live_portrait_wrapper.py
LivePortrait/src/config/: inference_config.py
LivePortrait/src/utils/: face_analysis_diy.py  helper.py
LivePortrait/utils/: helper.py  video.py
exp_data/: 입술내밀기.exp
sample/: sample.json  sample2.json  workflow1_basic.json  workflow2_advanced.json
sample/workflows/: Advanced_Animate_without_vid.json  Advanced_Inserting_expressions_into_vid.json  Bacis_Extracting_expression_from_photo.json  Bacis_Liveportrait_with_expression_editing.json  Bacis_Simple_expression_editing.json  audio_reactive_animate.json
sample/workflows/flex/: FLEX_Advanced_Audio_Reactive_expression.json  FLEX_Advanced_Inserting_expressions_into_vid.json
